Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31584

Display default content when user has not selected an extension

XMLWordPrintable

      As a user I want to have some sensible content shown when I have not selected an extension. 

      Default content to entice the user to select an extension to view its details or even install it.

      --- 

      As a design-side requirement, also define whether there's always some extensions to show in the list. Filtering or searching can obviously return empty results and that's OK. 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            vilavoniu Ville Lavonius
            Ville Lavonius Ville Lavonius
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes