ExtensionManager: Show details placeholder when no extension is selected

The placeholder and the details widget are in a stack layout and made
visible, accordingly.

Task-number: QTCREATORBUG-31584
Change-Id: I0d42ab52ce12f1d42e259f540c247b79fc33d25f
Reviewed-by: hjk <hjk@qt.io>